@startuml

title __SPELLS's Class Diagram__\n

  namespace  {
    namespace om.company {
      namespace spells {
        class com.company.spells.Eclair {
            + Eclair()
        }
      }
    }
  }
  

  namespace  {
    namespace om.company {
      namespace spells {
        class com.company.spells.Fire {
            + Fire()
        }
      }
    }
  }
  

  namespace  {
    namespace om.company {
      namespace spells {
        abstract class com.company.spells.Spell {
            # spellStrength : int
            + Spell()
            + Spell()
            + addSpellStrength()
            + getSpellStrength()
            + interact()
        }
      }
    }
  }
  

  com.company.spells.Eclair -up-|> com.company.spells.Spell
  com.company.spells.Fire -up-|> com.company.spells.Spell
  com.company.spells.Spell -up-|> com.company.Case


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
